// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-expect-message should fail with custom message 1`] = `
"Custom message:
  Woah this should be false!

[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Received: [31mfalse[39m"
`;

exports[`jest-expect-message should fail with obj custom message 1`] = `
"Custom message:
  {\\"data\\":{\\"orederId\\":1}}

[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Received: [31mfalse[39m"
`;

exports[`jest-expect-message should fail without custom message 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Received: [31mfalse[39m"
`;

exports[`jest-expect-message supports custom matchers registered after jest-expect-message allows new custom matchers to use custom messages 1`] = `
"Custom message:
  100 % 3 === 1

expected 100 to be divisible by 3"
`;

exports[`jest-expect-message supports custom matchers registered after jest-expect-message allows new custom matchers to use custom messages 2`] = `
"Custom message:
  101 % 1 === 0

expected 101 not to be divisible by 1"
`;
